# face-recognition

./: Attendance.csv  README.md  attendance.pickle  db.sqlite3  docs.xt.txt  pickle_file.pickle  pyproject.toml  requirements.txt
absentees_documents/: 2023-02-17.csv  2023-02-19.csv  2023-02-20.csv  2023-02-21.csv  2023-02-22.csv  2023-02-24.csv
attendance_documents/: 2023-02-24_Absent_All_file.csv  2023-02-24_Present_All_file.csv  2023-02-25_Present_All_file.csv
core/: docs.xt.txt  forms.py  models.py  urls.py  views.py
core/migrations/: 0003_auto_20230131_2127.py  0004_auto_20230131_2208.py  0005_auto_20230131_2250.py
core/templates/core/: add_profile.html  ajax.html  attendance.html  base.html  day_attendance.html  details.html  index.html  manul_attendance.html  open.html  profiles.html  signin.html  signup.html  table.html
media/attendance_documents/: 2023-02-26_Absent_All_file.csv  2023-02-28_Present_All_file.csv  2023-03-02_Present_All_file.csv  2023-03-07_Present_All_file.csv  2023-03-07to2023-03-06__All_ACfile.csv  2023-03-07to2023-03-06__All_Allfile.csv  2023-03-18to2023-03-17__All_Allfile.csv  2023-04-22to2023-04-21__All_Allfile.csv
media/documents/: 2023-02-14.csv  2023-02-15.csv  2023-02-16.csv  2023-02-17.csv  2023-02-19.csv  2023-02-20.csv  2023-02-21.csv  2023-02-22.csv  2023-02-24.csv
media/picklefiles/: attendance.pickle  delete_user.pickle  pickle_file.pickle
project/: settings.py
static/css/: style.css  style_sign.css
