[tool.poetry]
name = "facedb"
version = "0.1.0"
description = ""
authors = ["Your Name <you@example.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.9"
cmake = "^3.25.2"
asgiref = "3.3.1"
click = "7.1.2"
django = "3.1.3"
wheel = "^0.38.4"
dlib = "<19.24.0"
face-recognition = "^1.3.0"
face-recognition-models = "^0.3.0"
numpy = "^1.24.2"
opencv-python = "4.4.0.46"
pillow = "8.0.1"
playsound = "1.2.2"
pytz = "2020.4"
sqlparse = "0.4.1"
pandas = "^1.5.3"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
